# single_agent_herding_adp

./: CMakeLists.txt  README.md  package.xml
experiments/: plotData.py
experiments/expvideo/: bebop4.txt  sheep1.txt
experiments/expx1/: bebop4.txt  sheep1.txt
experiments/expx10/: bebop4.txt  sheep1.txt
experiments/expx2/: bebop4.txt  sheep1.txt
experiments/expx3/: bebop4.txt  sheep1.txt
experiments/expx4/: bebop4.txt  sheep1.txt
experiments/expx5/: bebop4.txt  sheep1.txt
experiments/expx6/: bebop4.txt  sheep1.txt
experiments/expx7/: bebop4.txt  sheep1.txt
experiments/expx8/: bebop4.txt  sheep1.txt
experiments/expx9/: bebop4.txt  sheep1.txt
experiments/expxTiger/: bebop4.txt  sheep1.txt
experiments/x1/: bebop4.txt  sheep1.txt
experiments/x2/: bebop4.txt  sheep1.txt
experiments/x3/: bebop4.txt  sheep1.txt
experiments/x4/: bebop4.txt  sheep1.txt
experiments/x5/: bebop4.txt  sheep1.txt
experiments/x6/: bebop4.txt  sheep1.txt
experiments/x7/: bebop4.txt  sheep1.txt
experiments/x8/: bebop4.txt  sheep1.txt
include/: bear.h  dynamics_estimator.h  helper_functions.h  sheep.h
launch/: ar_projector.launch  arbiter.launch  herding.launch
src/: ar_projector.cpp  arbiter.cpp  bear.cpp  dynamics_estimator.cpp  extrapolated_point.cpp  helper_functions.cpp  herding_adp_main.cpp  sheep.cpp
